--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.9.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.5",
+    "postcss-import": "^16.1.0",
+    "sass-embedded": "^1.89.2",
+    "tailwindcss": "^4.1.10"
   }
 }
